--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
     <a href="#services">خدماتنا</a>
     <a href="#team">طاقم العمل</a>
     <a href="#mountains">الأماكن</a>
-    <a href="#birds">الطيور والنباتات</a>
-    <a href="#about">سقطرى</a>
     <a href="#about">الرئيسية</a>
   </nav>
 </header>
 
 <!-- HERO -->
 <section class="hero">
-  <h1><br><br><br><br><br><br><br><br><br><br><br>SocotraTime</h1>
+  <h1><br>Socotra0000000000000000000000000Time</h1>
   <div class="overlay">
     <div class="card"><img src="images/photos.jpg"><div class="text">      Socotra Island, <br>located in the Arabian Sea...
 </div></div>
@@ -63,6 +61,8 @@
 </div></div>
   </div>
 </section>
+
+
 
 <!-- ABOUT -->
 <section id="about" class="about-socotra">
@@ -248,3 +248,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+
